Add exporting private groups

--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -34,7 +34,7 @@
     "Copy tabs into this group": "Copy tabs into this group",
     "Move tabs into this group": "Move tabs into this group",
     "The new name has been saved": "The new name has been saved",
-    "This group is private. You need to unlock it to see the links": "This group is private. You need to unlock it to see the links",
+    "This group is private. You need to unlock it to see the options": "This group is private. You need to unlock it to see the options",
     "Group has not been found": "Group has not been found",
     "Group is already locked": "Group is already locked",
     "Password is empty": "Password is empty",
