--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -70,5 +70,10 @@
     "This feature doesn't work for this current URL": "This feature doesn't work for this current URL",
     "Repeat password": "Repeat password",
     "Passwords do not match": "Passwords do not match",
-    "Export this group": "Export this group"
+    "Export this group": "Export this group",
+    "Rebind to other URL": "Rebind to other URL",
+    "Enter a new URL to bind your private group to this new URL. This group will be only visible in the list of groups only when you visit this specific URL": "Enter a new URL to bind your private group to this new URL. This group will be only visible in the list of groups only when you visit this specific URL",
+    "Enter a new URL to bind to": "Enter a new URL to bind to",
+    "Rebind": "Rebind",
+    "Group rebind successful": "Group rebind successful"
 }
