--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -75,5 +75,6 @@
     "Enter a new URL to bind your private group to this new URL. This group will be only visible in the list of groups only when you visit this specific URL": "Enter a new URL to bind your private group to this new URL. This group will be only visible in the list of groups only when you visit this specific URL",
     "Enter a new URL to bind to": "Enter a new URL to bind to",
     "Rebind": "Rebind",
-    "Group rebind successful": "Group rebind successful"
+    "Group rebind successful": "Group rebind successful",
+    "URL must start with http:// or https://": "URL must start with http:// or https://"
 }
