Change title in options section

--- a/src/settings/locales/en.json
+++ b/src/settings/locales/en.json
@@ -2,7 +2,7 @@
     "Settings": "Settings",
     "Change the extension configurations here": "Change the extension configurations here",
     "Additional Options": "Additional Options",
-    "Lock the group back after restoring the links": "Lock the group back after restoring the links",
+    "Lock the group back after restoring the tabs": "Lock the group back after restoring the tabs",
     "Settings have been updated": "Settings have been updated",
     "Erase all groups": "Erase all groups",
     "I confirm that I want to delete all groups": "I confirm that I want to delete all groups",
