--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -66,7 +66,7 @@
     "Release Notes": "Release Notes",
     "Change Icon": "Change Icon",
     "Choose a group icon": "Choose a group icon",
-    "Choose": "Choose",
+    "Select": "Select",
     "Icon has been set": "Icon has been set",
     "This feature doesn't work for this current URL": "This feature doesn't work for this current URL",
     "Repeat password": "Repeat password",
