Add Russian language support

--- a/src/settings/locales/ru.json
+++ b/src/settings/locales/ru.json
@@ -1,3 +1,34 @@
 {
-    "Settings": "Настройки"
+    "Settings": "Настройки",
+    "Change the extension configurations here": "Измените конфигурации расширения здесь",
+    "Additional Options": "Дополнительные параметры",
+    "Lock the group back after restoring the tabs": "Заблокировать группу после восстановления вкладок",
+    "Settings have been updated": "Настройки обновлены",
+    "Erase all groups": "Удалить все группы",
+    "I confirm that I want to delete all groups": "Я подтверждаю, что хочу удалить все группы",
+    "Confirm that you want to delete all groups": "Подтвердите, что вы хотите удалить все группы",
+    "All the groups have been deleted": "Все группы были удалены",
+    "Show private groups only in browser incognito mode. In regular browser mode, they will be hidden": "Показывать приватные группы только в режиме инкогнито браузера. В обычном режиме они будут скрыты",
+    "Settings have been saved": "Настройки сохранены",
+    "Go to the extension settings and enable the option 'Allow in incognito' or 'Allow in Private'": "Перейдите в настройки расширения и включите опцию 'Разрешить в режиме инкогнито' или 'Разрешить в приватном режиме'",
+    "If the new group name matches an existing one, override it": "Если имя новой группы совпадает с существующим, замените его",
+    "Show only private groups in browser incognito mode. It means that public groups will be hidden in incognito mode": "Показывать только приватные группы в режиме инкогнито браузера. Это означает, что публичные группы будут скрыты в режиме инкогнито",
+    "Export Tab Groups": "Экспортировать группы вкладок",
+    "Export": "Экспорт",
+    "Export all of your tab groups. Keep in mind that private groups are not going to be exported. If you want to export them, you need to do it for each private group separately": "Экспортируйте все ваши группы вкладок. Учтите, что приватные группы не будут экспортированы. Если вы хотите экспортировать их, это нужно сделать для каждой приватной группы отдельно",
+    "No groups to export": "Нет групп для экспорта",
+    "It will be used to encrypt the exported data": "Это будет использовано для шифрования экспортированных данных",
+    "Import Tab Groups": "Импортировать группы вкладок",
+    "Import private or public tab groups": "Импортировать приватные или публичные группы вкладок",
+    "Import": "Импорт",
+    "Choose the exported file": "Выберите экспортированный файл",
+    "Please choose a file to import": "Пожалуйста, выберите файл для импорта",
+    "Failed to decrypt the file": "Не удалось расшифровать файл",
+    "Error reading file": "Ошибка чтения файла",
+    "Some groups that you want to import already exist with the same name. Do you want to replace them?": "Некоторые группы, которые вы хотите импортировать, уже существуют с таким же именем. Вы хотите заменить их?",
+    "Replace groups?": "Заменить группы?",
+    "Yes": "Да",
+    "No": "Нет",
+    ":n groups imported successfully": ":n групп успешно импортировано",
+    "File chosen": "Файл выбран"
 }
