Add language switcher to settings

--- a/src/settings/locales/en.json
+++ b/src/settings/locales/en.json
@@ -30,5 +30,7 @@
     "Yes": "Yes",
     "No": "No",
     ":n groups imported successfully": ":n groups imported successfully",
-    "File chosen": "File chosen"
+    "File chosen": "File chosen",
+    "Change Language": "Change Language",
+    "Change the extension interface language": "Change the extension interface language"
 }
