--- a/src/popup/locales/en.json
+++ b/src/popup/locales/en.json
@@ -27,7 +27,7 @@
     "Group is unlocked": "Group is unlocked",
     "Group is locked": "Group is locked",
     "Something went wrong! Cannot remember your password": "Something went wrong! Cannot remember your password",
-    "Error ocurred": "Error ocurred",
+    "Error occurred": "Error occurred",
     "Open tabs": "Open tabs",
     "Open tabs and delete this group": "Open tabs and delete this group",
     "Copy tabs into this group": "Copy tabs into this group",
