--- a/src/popup/locales/ru.json
+++ b/src/popup/locales/ru.json
@@ -27,7 +27,7 @@
     "Group is unlocked": "Группа разблокирована",
     "Group is locked": "Группа заблокирована",
     "Something went wrong! Cannot remember your password": "Что-то пошло не так! Не могу вспомнить ваш пароль",
-    "Error ocurred": "Произошла ошибка",
+    "Error occurred": "Произошла ошибка",
     "Open tabs": "Открыть вкладки",
     "Open tabs and delete this group": "Открыть вкладки и удалить эту группу",
     "Copy tabs into this group": "Скопировать вкладки в эту группу",
