--- a/src/popup/locales/zh.json
+++ b/src/popup/locales/zh.json
@@ -27,7 +27,7 @@
     "Group is unlocked": "组已解锁",
     "Group is locked": "组已锁定",
     "Something went wrong! Cannot remember your password": "出现问题！无法记住您的密码",
-    "Error ocurred": "发生错误",
+    "Error occurred": "发生错误",
     "Open tabs": "打开标签页",
     "Open tabs and delete this group": "打开标签页并删除该组",
     "Copy tabs into this group": "复制标签页到该组",
