--- a/public/_locales/en_US/messages.json
+++ b/public/_locales/en_US/messages.json
@@ -11,7 +11,6 @@
     "deselect_all": "Deselect all",
     "cancel": "Cancel",
     "add_tabs": "Add tabs",
-
     "no_tabs_found": "No tabs found",
     "no_groups_yet": "There are no groups yet",
     "settings": "Settings",
@@ -23,7 +22,6 @@
     "enter_group_name": "Enter a group name",
     "group_name": "Group name",
     "enter_pass_unlock_content": "Enter a password to unlock the content of this group",
-    "got_it": "Got it",
     "wrong_pass": "Incorrect password",
     "group_unlocked": "Group is unlocked",
     "group_locked": "Group is locked",
@@ -40,18 +38,14 @@
     "pass_empty": "Password is empty",
     "private_group_unlocked": "This private group is unlocked",
     "lock": "Lock",
-    "lock_group": "Lock the group",
     "no_tabs_to_save": "No tabs to save",
-    "tabs_not_saved": "Tabs have been saved",
+    "tabs_now_saved": "Tabs have been saved",
     "create_group": "Create the group",
     "you_not_selected_tabs": "You haven't selected any tabs",
     "tabs_added_to_group": "Tabs added to the group",
     "group_created_without_tabs": "Group created without any tabs selected",
     "group_created_with_tabs": "Group created with tabs",
     "close_selected_tabs": "Close selected tabs",
-    "tabs_opened": "Tabs opened",
-    "group_pass": "Group password",
-    "wait_before_try_again": "Wait before trying again",
     "bind_to_url": "Bind to this URL",
     "private_groups_are_secure": "Private groups are secure and use encryption. Only users with the password can access them",
     "rate_us": "Rate Us",
@@ -61,6 +55,7 @@
     "contribute": "Contribute",
     "release_notes": "Release Notes",
     "change_icon": "Change Icon",
+
     "choose_group_icon": "Choose a group icon",
     "select": "Select",
     "icon_is_set": "Icon has been set",
