Translated all strings

--- a/public/_locales/en_US/messages.json
+++ b/public/_locales/en_US/messages.json
@@ -55,14 +55,12 @@
     "contribute": "Contribute",
     "release_notes": "Release Notes",
     "change_icon": "Change Icon",
-
     "choose_group_icon": "Choose a group icon",
     "select": "Select",
     "icon_is_set": "Icon has been set",
-    "feature_does_not_work_this_url": "This feature doesn't work for this current URL",
     "repeat_pass": "Repeat password",
     "passwords_not_match": "Passwords do not match",
-    "export this group": "Export this group",
+    "export_this_group": "Export this group",
     "rebind_to_other_url": "Rebind to other URL",
     "enter_new_url_bind_private_to_new_url": "Enter a new URL to bind your private group to this new URL. This group will be only visible in the list of groups only when you visit this specific URL. Do not forget to lock the group",
     "enter_new_url_bind_to": "Enter a new URL to bind to",
@@ -80,7 +78,6 @@
     "group_name_or_tab_search": "Group name or tab title to search...",
     "change_the_conf_here": "Change the extension configurations here",
     "lock_group_after_restore": "Lock the group back after restoring the tabs",
-    "settings_updated": "Settings have been updated",
     "erase_all_groups": "Erase all groups",
     "i_confirm_want_delete_groups": "I confirm that I want to delete all groups",
     "confirm_want_delete_groups": "Confirm that you want to delete all groups",
@@ -93,8 +90,7 @@
     "export_tab_groups": "Export Tab Groups",
     "export": "Export",
     "export_all_your_groups": "Export all of your tab groups. Keep in mind that private groups are not going to be exported. If you want to export them, you need to do it for each private group separately",
-    "no groups to export": "No groups to export",
-    "will_be_used_encrypt_exported_data": "It will be used to encrypt the exported data",
+    "no_groups_export": "No groups to export",
     "import_groups": "Import Tab Groups",
     "import_private_public_groups": "Import private or public tab groups",
     "import": "Import",
