Add translation for name and description

--- a/public/_locales/en_US/messages.json
+++ b/public/_locales/en_US/messages.json
@@ -1,106 +1,108 @@
 {
-    "yes": "Yes",
-    "no": "No",
-    "lock": "Lock",
-    "emoji": "Emoji",
-    "bytes": "bytes",
-    "rebind": "Rebind",
-    "select": "Select",
-    "cancel": "Cancel",
-    "import": "Import",
-    "export": "Export",
-    "new_group": "New Group",
-    "error_no_group_selected": "Something went wrong! No group selected",
-    "want_delete_group": "Do you want to delete the group?",
-    "no_links_this_group": "There are no links in this group",
-    "select_tabs": "Select Tabs",
-    "click_on_each_tab": "Click on each tab to select or unselect it for saving to memory",
-    "select_all": "Select all",
-    "deselect_all": "Deselect all",
-    "add_tabs": "Add tabs",
-    "no_tabs_found": "No tabs found",
-    "no_groups_yet": "There are no groups yet",
-    "settings": "Settings",
-    "enter_pass": "Enter a password",
-    "add_more_links": "Add more links",
-    "delete_this_group": "Delete this group",
-    "rename_this_group": "Rename this group",
-    "additional_options": "Additional options",
-    "enter_group_name": "Enter a group name",
-    "group_name": "Group name",
-    "enter_pass_unlock_content": "Enter a password to unlock the content of this group",
-    "wrong_pass": "Incorrect password",
-    "group_unlocked": "Group is unlocked",
-    "group_locked": "Group is locked",
-    "cant_remember_pass": "Something went wrong! Cannot remember your password",
-    "error_occurred": "Error occurred",
-    "open_tabs": "Open tabs",
-    "open_tabs_delete_group": "Open tabs and delete this group",
-    "copy_tabs_into_group": "Copy tabs into this group",
-    "move_tabs_into_group": "Move tabs into this group",
-    "new_name_saved": "The new name has been saved",
-    "group_private_unlock_it": "This group is private. You need to unlock it to see the options",
-    "group_not_found": "Group has not been found",
-    "group_already_locked": "Group is already locked",
-    "pass_empty": "Password is empty",
-    "private_group_unlocked": "This private group is unlocked",
-    "no_tabs_to_save": "No tabs to save",
-    "tabs_now_saved": "Tabs have been saved",
-    "create_group": "Create the group",
-    "you_not_selected_tabs": "You haven't selected any tabs",
-    "tabs_added_to_group": "Tabs added to the group",
-    "group_created_without_tabs": "Group created without any tabs selected",
-    "group_created_with_tabs": "Group created with tabs",
-    "close_selected_tabs": "Close selected tabs",
-    "bind_to_url": "Bind to this URL",
-    "private_groups_are_secure": "Private groups are secure and use encryption. Only users with the password can access them",
-    "rate_us": "Rate Us",
-    "storage_usage": "Storage usage",
-    "group_name_long": "Group name is too long",
-    "contribute": "Contribute",
-    "release_notes": "Release Notes",
-    "change_icon": "Change Icon",
-    "choose_group_icon": "Choose a group icon",
-    "icon_is_set": "Icon has been set",
-    "repeat_pass": "Repeat password",
-    "passwords_not_match": "Passwords do not match",
-    "export_this_group": "Export this group",
-    "rebind_to_other_url": "Rebind to other URL",
-    "enter_new_url_bind_private_to_new_url": "Enter a new URL to bind your private group to this new URL. This group will be only visible in the list of groups only when you visit this specific URL. Do not forget to lock the group",
-    "enter_new_url_bind_to": "Enter a new URL to bind to",
-    "group_rebind_successful": "Group rebind successful",
-    "url_must_start_with_http": "URL must start with http:// or https://",
-    "select_emoji": "Select emoji",
-    "select_image": "Select image",
-    "input_one_emoji": "The input must contain exactly one emoji",
-    "enter_any_emoji": "Enter any emoji",
-    "any_emoji_as_group_icon": "Type any emoji to set it as a group icon",
-    "enter_image_url": "Enter image URL",
-    "type_any_image_url_to_set_it": "Type any image URL to set it as a group icon",
-    "group_name_or_tab_search": "Group name or tab title to search...",
-    "change_the_conf_here": "Change the extension configurations here",
-    "lock_group_after_restore": "Lock the group back after restoring the tabs",
-    "erase_all_groups": "Erase all groups",
-    "i_confirm_want_delete_groups": "I confirm that I want to delete all groups",
-    "confirm_want_delete_groups": "Confirm that you want to delete all groups",
-    "all_groups_deleted": "All the groups have been deleted",
-    "show_private_groups_incognito": "Show private groups only in browser incognito mode. In regular browser mode, they will be hidden",
-    "settings_saved": "Settings have been saved",
-    "go_to_settings_and_enable_allow_incognito": "Go to the extension settings and enable the option 'Allow in incognito' or 'Allow in Private'",
-    "override_existing_match": "If the new group name matches an existing one, override it",
-    "only_private_groups_incognito": "Show only private groups in browser incognito mode. It means that public groups will be hidden in incognito mode",
-    "export_tab_groups": "Export Tab Groups",
-    "export_all_your_groups": "Export all of your tab groups. Keep in mind that private groups are not going to be exported. If you want to export them, you need to do it for each private group separately",
-    "no_groups_export": "No groups to export",
-    "import_groups": "Import Tab Groups",
-    "import_private_public_groups": "Import private or public tab groups",
-    "choose_exported_file": "Choose the exported file",
-    "choose_file_import": "Please choose a file to import",
-    "failed_decrypt_file": "Failed to decrypt the file",
-    "error_reading_file": "Error reading file",
-    "some_groups_already_exist_same_name": "Some groups that you want to import already exist with the same name. Do you want to replace them?",
-    "replace_groups": "Replace groups?",
-    "file_chosen": "File chosen",
+    "ext_name": {"message": "Tab Guardian"},
+    "ext_description": {"message": "Browser extension that allows you to save and restore your tabs including encrypting them with a password"},
+    "yes": {"message": "Yes"},
+    "no": {"message": "No"},
+    "lock": {"message": "Lock"},
+    "emoji": {"message": "Emoji"},
+    "bytes": {"message": "bytes"},
+    "rebind": {"message": "Rebind"},
+    "select": {"message": "Select"},
+    "cancel": {"message": "Cancel"},
+    "import": {"message": "Import"},
+    "export": {"message": "Export"},
+    "new_group": {"message": "New Group"},
+    "error_no_group_selected": {"message": "Something went wrong! No group selected"},
+    "want_delete_group": {"message": "Do you want to delete the group?"},
+    "no_links_this_group": {"message": "There are no links in this group"},
+    "select_tabs": {"message": "Select Tabs"},
+    "click_on_each_tab": {"message": "Click on each tab to select or unselect it for saving to memory"},
+    "select_all": {"message": "Select all"},
+    "deselect_all": {"message": "Deselect all"},
+    "add_tabs": {"message": "Add tabs"},
+    "no_tabs_found": {"message": "No tabs found"},
+    "no_groups_yet": {"message": "There are no groups yet"},
+    "settings": {"message": "Settings"},
+    "enter_pass": {"message": "Enter a password"},
+    "add_more_links": {"message": "Add more links"},
+    "delete_this_group": {"message": "Delete this group"},
+    "rename_this_group": {"message": "Rename this group"},
+    "additional_options": {"message": "Additional options"},
+    "enter_group_name": {"message": "Enter a group name"},
+    "group_name": {"message": "Group name"},
+    "enter_pass_unlock_content": {"message": "Enter a password to unlock the content of this group"},
+    "wrong_pass": {"message": "Incorrect password"},
+    "group_unlocked": {"message": "Group is unlocked"},
+    "group_locked": {"message": "Group is locked"},
+    "cant_remember_pass": {"message": "Something went wrong! Cannot remember your password"},
+    "error_occurred": {"message": "Error occurred"},
+    "open_tabs": {"message": "Open tabs"},
+    "open_tabs_delete_group": {"message": "Open tabs and delete this group"},
+    "copy_tabs_into_group": {"message": "Copy tabs into this group"},
+    "move_tabs_into_group": {"message": "Move tabs into this group"},
+    "new_name_saved": {"message": "The new name has been saved"},
+    "group_private_unlock_it": {"message": "This group is private. You need to unlock it to see the options"},
+    "group_not_found": {"message": "Group has not been found"},
+    "group_already_locked": {"message": "Group is already locked"},
+    "pass_empty": {"message": "Password is empty"},
+    "private_group_unlocked": {"message": "This private group is unlocked"},
+    "no_tabs_to_save": {"message": "No tabs to save"},
+    "tabs_now_saved": {"message": "Tabs have been saved"},
+    "create_group": {"message": "Create the group"},
+    "you_not_selected_tabs": {"message": "You haven't selected any tabs"},
+    "tabs_added_to_group": {"message": "Tabs added to the group"},
+    "group_created_without_tabs": {"message": "Group created without any tabs selected"},
+    "group_created_with_tabs": {"message": "Group created with tabs"},
+    "close_selected_tabs": {"message": "Close selected tabs"},
+    "bind_to_url": {"message": "Bind to this URL"},
+    "private_groups_are_secure": {"message": "Private groups are secure and use encryption. Only users with the password can access them"},
+    "rate_us": {"message": "Rate Us"},
+    "storage_usage": {"message": "Storage usage"},
+    "group_name_long": {"message": "Group name is too long"},
+    "contribute": {"message": "Contribute"},
+    "release_notes": {"message": "Release Notes"},
+    "change_icon": {"message": "Change Icon"},
+    "choose_group_icon": {"message": "Choose a group icon"},
+    "icon_is_set": {"message": "Icon has been set"},
+    "repeat_pass": {"message": "Repeat password"},
+    "passwords_not_match": {"message": "Passwords do not match"},
+    "export_this_group": {"message": "Export this group"},
+    "rebind_to_other_url": {"message": "Rebind to other URL"},
+    "enter_new_url_bind_private_to_new_url": {"message": "Enter a new URL to bind your private group to this new URL. This group will be only visible in the list of groups only when you visit this specific URL. Do not forget to lock the group"},
+    "enter_new_url_bind_to": {"message": "Enter a new URL to bind to"},
+    "group_rebind_successful": {"message": "Group rebind successful"},
+    "url_must_start_with_http": {"message": "URL must start with http:// or https://"},
+    "select_emoji": {"message": "Select emoji"},
+    "select_image": {"message": "Select image"},
+    "input_one_emoji": {"message": "The input must contain exactly one emoji"},
+    "enter_any_emoji": {"message": "Enter any emoji"},
+    "any_emoji_as_group_icon": {"message": "Type any emoji to set it as a group icon"},
+    "enter_image_url": {"message": "Enter image URL"},
+    "type_any_image_url_to_set_it": {"message": "Type any image URL to set it as a group icon"},
+    "group_name_or_tab_search": {"message": "Group name or tab title to search..."},
+    "change_the_conf_here": {"message": "Change the extension configurations here"},
+    "lock_group_after_restore": {"message": "Lock the group back after restoring the tabs"},
+    "erase_all_groups": {"message": "Erase all groups"},
+    "i_confirm_want_delete_groups": {"message": "I confirm that I want to delete all groups"},
+    "confirm_want_delete_groups": {"message": "Confirm that you want to delete all groups"},
+    "all_groups_deleted": {"message": "All the groups have been deleted"},
+    "show_private_groups_incognito": {"message": "Show private groups only in browser incognito mode. In regular browser mode, they will be hidden"},
+    "settings_saved": {"message": "Settings have been saved"},
+    "go_to_settings_and_enable_allow_incognito": {"message": "Go to the extension settings and enable the option 'Allow in incognito' or 'Allow in Private'"},
+    "override_existing_match": {"message": "If the new group name matches an existing one, override it"},
+    "only_private_groups_incognito": {"message": "Show only private groups in browser incognito mode. It means that public groups will be hidden in incognito mode"},
+    "export_tab_groups": {"message": "Export Tab Groups"},
+    "export_all_your_groups": {"message": "Export all of your tab groups. Keep in mind that private groups are not going to be exported. If you want to export them, you need to do it for each private group separately"},
+    "no_groups_export": {"message": "No groups to export"},
+    "import_groups": {"message": "Import Tab Groups"},
+    "import_private_public_groups": {"message": "Import private or public tab groups"},
+    "choose_exported_file": {"message": "Choose the exported file"},
+    "choose_file_import": {"message": "Please choose a file to import"},
+    "failed_decrypt_file": {"message": "Failed to decrypt the file"},
+    "error_reading_file": {"message": "Error reading file"},
+    "some_groups_already_exist_same_name": {"message": "Some groups that you want to import already exist with the same name. Do you want to replace them?"},
+    "replace_groups": {"message": "Replace groups?"},
+    "file_chosen": {"message": "File chosen"},
     "groups_imported": {
         "message": "$n$ groups imported successfully",
         "placeholders": {
