--- a/public/_locales/ru/messages.json
+++ b/public/_locales/ru/messages.json
@@ -24,9 +24,9 @@
     "no_groups_yet": {"message": "Группы пока отсутствуют"},
     "settings": {"message": "Настройки"},
     "enter_pass": {"message": "Введите пароль"},
-    "add_more_links": {"message": "Добавить больше ссылок"},
-    "delete_this_group": {"message": "Удалить эту группу"},
-    "rename_this_group": {"message": "Переименовать эту группу"},
+    "add_more_links": {"message": "Добавить больше вкладок"},
+    "delete_this_group": {"message": "Удалить"},
+    "rename_this_group": {"message": "Переименовать"},
     "additional_options": {"message": "Дополнительные параметры"},
     "enter_group_name": {"message": "Введите имя группы"},
     "group_name": {"message": "Имя группы"},
@@ -60,13 +60,13 @@
     "storage_usage": {"message": "Использование хранилища"},
     "group_name_long": {"message": "Имя группы слишком длинное"},
     "contribute": {"message": "Поддержите проект"},
-    "release_notes": {"message": "Примечания к выпуску"},
+    "release_notes": {"message": "Журнал изменений"},
     "change_icon": {"message": "Изменить значок"},
     "choose_group_icon": {"message": "Выберите значок группы"},
     "icon_is_set": {"message": "Значок установлен"},
     "repeat_pass": {"message": "Повторите пароль"},
     "passwords_not_match": {"message": "Пароли не совпадают"},
-    "export_this_group": {"message": "Экспортировать эту группу"},
+    "export_this_group": {"message": "Экспортировать"},
     "rebind_to_other_url": {"message": "Перепривязать к другому URL"},
     "enter_new_url_bind_private_to_new_url": {"message": "Введите новый URL для привязки вашей приватной группы. Эта группа будет видна только при посещении указанного URL. Не забудьте заблокировать группу"},
     "enter_new_url_bind_to": {"message": "Введите новый URL для привязки"},
@@ -79,7 +79,7 @@
     "any_emoji_as_group_icon": {"message": "Введите любое эмодзи, чтобы установить его в качестве значка группы"},
     "enter_image_url": {"message": "Введите URL изображения"},
     "type_any_image_url_to_set_it": {"message": "Введите URL изображения, чтобы установить его в качестве значка группы"},
-    "group_name_or_tab_search": {"message": "Имя группы или название вкладки для поиска..."},
+    "group_name_or_tab_search": {"message": "Имя группы или название вкладки..."},
     "change_the_conf_here": {"message": "Измените настройки расширения здесь"},
     "lock_group_after_restore": {"message": "Заблокировать группу после восстановления вкладок"},
     "erase_all_groups": {"message": "Удалить все группы"},
