Fix some translations

--- a/public/_locales/ru/messages.json
+++ b/public/_locales/ru/messages.json
@@ -5,7 +5,7 @@
     "no": {"message": "Нет"},
     "lock": {"message": "Заблокировать"},
     "emoji": {"message": "Эмодзи"},
-    "bytes": {"message": "байты"},
+    "bytes": {"message": "байт"},
     "rebind": {"message": "Перепривязать"},
     "select": {"message": "Выбрать"},
     "cancel": {"message": "Отмена"},
@@ -15,10 +15,9 @@
     "error_no_group_selected": {"message": "Что-то пошло не так! Группа не выбрана"},
     "want_delete_group": {"message": "Вы хотите удалить группу?"},
     "no_links_this_group": {"message": "В этой группе нет ссылок"},
-    "select_tabs": {"message": "Выбрать вкладки"},
-    "click_on_each_tab": {"message": "Щелкните на каждую вкладку, чтобы выбрать или отменить выбор для сохранения"},
+    "click_on_each_tab": {"message": "Нажмите на каждую вкладку, чтобы выбрать или отменить выбор для сохранения"},
     "select_all": {"message": "Выбрать все"},
-    "deselect_all": {"message": "Снять выбор со всех"},
+    "deselect_all": {"message": "Снять со всех"},
     "add_tabs": {"message": "Добавить вкладки"},
     "no_tabs_found": {"message": "Вкладки не найдены"},
     "no_groups_yet": {"message": "Группы пока отсутствуют"},
@@ -48,18 +47,18 @@
     "private_group_unlocked": {"message": "Эта приватная группа разблокирована"},
     "no_tabs_to_save": {"message": "Нет вкладок для сохранения"},
     "tabs_now_saved": {"message": "Вкладки сохранены"},
-    "create_group": {"message": "Создать группу"},
+    "create_group": {"message": "Создать"},
     "you_not_selected_tabs": {"message": "Вы не выбрали ни одной вкладки"},
     "tabs_added_to_group": {"message": "Вкладки добавлены в группу"},
     "group_created_without_tabs": {"message": "Группа создана без выбранных вкладок"},
     "group_created_with_tabs": {"message": "Группа создана с вкладками"},
-    "close_selected_tabs": {"message": "Закрыть выбранные вкладки"},
-    "bind_to_url": {"message": "Привязать к этому URL"},
+    "close_selected_tabs": {"message": "Закрыть выбранное"},
+    "bind_to_url": {"message": "Привязать к URL"},
     "private_groups_are_secure": {"message": "Приватные группы защищены и используют шифрование. Доступ к ним имеют только пользователи с паролем"},
     "rate_us": {"message": "Оцените нас"},
-    "storage_usage": {"message": "Использование хранилища"},
+    "storage_usage": {"message": "Хранилище"},
     "group_name_long": {"message": "Имя группы слишком длинное"},
-    "contribute": {"message": "Поддержите проект"},
+    "contribute": {"message": "Поддержите нас"},
     "release_notes": {"message": "Журнал изменений"},
     "change_icon": {"message": "Изменить значок"},
     "choose_group_icon": {"message": "Выберите значок группы"},
