Modify russian translations

--- a/public/_locales/ru/messages.json
+++ b/public/_locales/ru/messages.json
@@ -71,8 +71,8 @@
     "enter_new_url_bind_to": {"message": "Введите новый URL для привязки"},
     "group_rebind_successful": {"message": "Группа успешно перепривязана"},
     "url_must_start_with_http": {"message": "URL должен начинаться с http:// или https://"},
-    "select_emoji": {"message": "Выбрать эмодзи"},
-    "select_image": {"message": "Выбрать изображение"},
+    "select_emoji": {"message": "Эмодзи"},
+    "select_image": {"message": "Изображение"},
     "input_one_emoji": {"message": "Ввод должен содержать ровно одно эмодзи"},
     "enter_any_emoji": {"message": "Введите любое эмодзи"},
     "any_emoji_as_group_icon": {"message": "Введите любое эмодзи, чтобы установить его в качестве значка группы"},
